<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QBIM</string>
    <string name="nim_permission_rationale">"需要文件存储权限和录音操作权限"</string>
    <string name="nim_today">今天</string>
    <string name="nim_yesterday">昨天</string>
    <string name="nim_just_now">刚刚</string>
    <string name="nim_many_minutes_ago">%s分钟前</string>
    <string name="nim_many_hour_ago">%s小时前</string>
    <string name="nim_many_day_ago">%s天前</string>
    <string name="nim_hour">小时</string>
    <string name="nim_minutes">分钟</string>
    <string name="nim_day">天</string>
    <string name="nim_hour_str">时</string>
    <string name="nim_minutes_str">分</string>
    <string name="nim_second">秒</string>

    <string name="nim_chat_audio_move_up_cancel">手指上滑，取消发送</string>
    <string name="nim_chat_audio_up_cancel">手指松开，取消发送</string>
    <string name="nim_chat_audio_up_send">松开 发送</string>
    <string name="nim_chat_press_speak">按住 说话</string>
    <string name="nim_chat_audio_recorder_error">权限不足，请打开麦克风权限后再录音</string>
    <string name="nim_msg_center_msg_audio">[语音]</string>
    <string name="nim_camera_invalid">找不到可用的相机</string>
    <string name="nim_album_invalid">找不到可用的相册</string>
    <string name="nim_save_picture_fail">图片保存失败</string>

    <string name="nim_chat_picture">图片</string>
    <string name="nim_chat_camera">拍照</string>
    <string name="nim_chat_position">位置</string>
    <string name="nim_chat_card">名片</string>
    <string name="nim_chat_red_packet">红包</string>
    <string name="nim_chat_favorite">我的收藏</string>
    <string name="nim_chat_play_voice_exc">录音文件损坏，无法播放！</string>
    <string name="nim_chat_audio_too_short">录音时间过短</string>
    <string name="nim_sdcard_not_exist">SD卡没有挂载！</string>
    <string name="nim_sdcard_not_free_space">SD存储空间不够！</string>
    <string name="nim_chat_content_exceed_max_length">已经超过最大文本长度</string>
    <string name="nim_chat_audio_not_exists">音频文件不存在</string>
    <string name="nim_net_is_out_str">没有网络,请稍后再试</string>
    <string name="nim_chat_forward">转发</string>
    <string name="nim_chat_delete">删除</string>
    <string name="nim_chat_resend">重新发送</string>
    <string name="chat_resend_hint">是否再次发送?</string>
    <string name="nim_chat_copy">拷贝</string>
    <string name="nim_connect_default_error">连接失败</string>
    <string name="nim_msg_center_msg_position">[位置]</string>
    <string name="nim_msg_center_msg_picture">[图片]</string>
    <string name="nim_msg_center_msg_vcard">[名片]</string>
    <string name="nim_msg_center_msg_commodity_order">[商品订单]</string>
    <string name="nim_msg_center_msg_red_packet">[红包]</string>
    <string name="nim_msg_center_msg_commodity">[商品]</string>
    <string name="nim_chat_msg_body_empty">不能发送空白信息</string>
    <string name="nim_search">搜索</string>
    <string name="nim_chat_nickname_unknown">未知</string>
    <string name="nim_search_friends_input_hit">手机号/用户名/邮箱</string>
    <string name="nim_add_friends_with_contacts">添加通讯录好友</string>
    <string name="nim_add_congenial">添加趣味相投的人</string>
    <string name="nim_add_publisher">添加公众号</string>
    <string name="nim_scan_qrcode">扫一扫</string>
    <string name="nim_please_enter_the_input">输入内容不能为空，请重新输入</string>

    <string name="nim_permission_cancel">取消</string>
    <string name="nim_permission_setting">去设置</string>
    <string name="nim_permission_keep_cancel">继续拒绝</string>
    <string name="nim_permission_title_permission_failed">权限申请失败</string>
    <string name="nim_permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="nim_permission_audio_fail">录音权限已被拒绝，无法发送语音消息</string>
    <string name="nim_permission_network_fail">存储和手机状态权限已被拒绝，无法访问网络</string>
    <string name="nim_permission_camera_fail">相机权限已被拒绝，无法拍照</string>
    <string name="nim_permission_scan_fail">相机权限已被拒绝，无法进入扫一扫</string>
    <string name="nim_permission_contact_fail">通讯录权限已被拒绝，无法获取数据</string>
    <string name="nim_permission_sms_fail">短信权限已被拒绝，无法获取数据</string>
    <string name="nim_permission_location_fail">位置权限已被拒绝，无法获取位置信息</string>
    <string name="nim_permission_resume">继续</string>
    <string name="nim_permission_title_permission_rationale">权限已被拒绝</string>
    <string name="nim_permission_message_permission_rationale">您已经拒绝过我们申请授权，请您同意授权，否则功能无法正常使用！</string>

    <string name="nim_pp_take_picture">拍摄照片</string>
    <string name="nim_pp_all_image">所有图片</string>
    <string name="nim_pp_confirm">确定</string>
    <string name="nim_pp_choose">选择</string>
    <string name="nim_pp_view_photo">查看图片</string>
    <string name="nim_pp_toast_photo_picker_max">最多只能选择 %1$d 张图片</string>
    <string name="nim_pp_photo_not_support">当前设备不支持发送图片</string>
    <string name="nim_pp_camera_not_support">当前设备不支持拍照</string>

    <string name="friends_help_name">新的朋友</string>
    <string name="please_enter_the_input">输入内容不能为空，请重新输入</string>
    <string name="net_error_reload_str">网络出错啦，点击屏幕重新加载</string>
    <string name="reload_str">重新加载</string>

    <string name="task_congenial_no_data_str">目前还没趣味相投的人，请稍后重试~</string>
    <string name="coupons_match">http://m.qbao.com/api/v34/o2opay/scanCodeGetBaoQuan?timeStamp=</string>
    <string name="coupons_match_https">https://m.qbao.com/api/v34/o2opay/scanCodeGetBaoQuan?timeStamp=</string>
    <string name="msg_camera_framework_bug">无法获取摄像头数据，请检查是否已经打开摄像头权限。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="contents_text">纯文本</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_location">地理坐标</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_dial">拨号</string>
    <string name="button_email">发送email</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="button_get_directions">获取地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="button_sms">发送短信</string>
    <string name="button_mms">发送彩信</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="result_text">找到纯文本</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="result_uri">找到URL</string>
    <string name="button_wifi">连接到网络</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。</string>
    <string name="msg_fail_tips">开启了好友验证，你还不是他(她)的好友。请先发送好友验证请求，对方验证通过后，才能聊天。 发送好友验证</string>
    <string name="msg_fail_refused">消息已发出，但被对方拒收了</string>
    <string name="nim_audio_mode_ear">当前听筒播放模式</string>
    <string name="nim_audio_mode_speaker">当前扬声器播放模式</string>
    <string name="nim_sure_to_clear_chat">确定要删除该群的所有聊天记录吗?</string>
    <string name="nim_sure_to_clear_private_chat">确定要删除和%s的聊天记录吗?</string>
    <string name="nim_clear_chat">删除聊天记录</string>
    <string name="nim_has_clear_all">已全部删除</string>
    <string name="nim_99_plus">99+</string>
    <string name="nim_sending">正在发送中</string>
    <string name="nim_get_ec_message_failed">商家消息获取失败，无法发</string>

    <string name="nim_login_success">IM登录成功</string>
    <string name="nim_connect_error">连接错误</string>
    <string name="nim_connect_failed">连接失败</string>
    <string name="nim_connect_closed">连接关闭</string>
    <string name="nim_be_kicked">退出登录:%s</string>
    <string name="nim_task_title">任务助手</string>
    <string name="nim_task_content">任务好帮手，欢迎使用。</string>
    <string name="nim_subscribe_title">订阅助手</string>
    <string name="nim_subscribe_content">集中管理已经订阅的公众号服务。</string>

    <string name="nim_exit_and_clear_msg">退出后将不再接收此群消息，同时删除该群的聊天记录</string>
    <string name="nim_exit_gc">退出群聊</string>
    <string name="nim_gc_member_count">群成员(%d人)</string>
    <string name="nim_recv_and_notify">接受消息并提醒</string>
    <string name="nim_recv_and_not_notify">接受消息但不提醒</string>
    <string name="nim_recv_to_assist">收进群助手且不提醒</string>
    <string name="nim_kicked_group">你已经被群主踢出该群</string>
    <string name="i_am_who">我是%s</string>
    <string name="edit_announce_permission">只有群主才可以编辑群公告</string>
    <string name="refuse_to_group">对方拒绝加入群聊</string>
    <string name="msg_sended">已发送</string>
    <string name="msg_tips">提示</string>
    <string name="firend_apply_send">%s未把你添加到通讯录，需要发送好友申请，等对方通过。是否发送?</string>
    <string name="group_member_up_limit">已达到群人数上限</string>
    <string name="group_setting">群聊设置</string>
    <string name="chat_setting">聊天设置</string>
    <string name="add_chat_member">添加聊天成员</string>
    <string name="add_new_member">添加新成员</string>
    <string name="group_assist">群助手</string>
    <string name="msg_readed">标记已读</string>
    <string name="msg_unread">标记未读</string>
    <string name="session_top">置顶聊天</string>
    <string name="session_top2">置顶</string>
    <string name="session_canncel_top">取消置顶</string>
    <string name="clear_this_chat">删除该聊天</string>
    <string name="operater">操作</string>
    <string name="msg_tag">标记</string>

    <string name="nim_operating">正在操作</string>
    <string name="nim_subscribe_session_name">订阅助手</string>
    <string name="nim_sys_message">订阅助手</string>
    <string name="nim_subscribe_msg_content">集中管理已经订阅的公众号服务。</string>
    <string name="nim_task_session_name">任务助手</string>
    <string name="nim_task_msg_content">任务好帮手，欢迎使用。</string>
    <string name="nim_assist_msg_content1">[%d个群有新消息]</string>
    <string name="nim_assist_msg_content3">查看"收进群助手且不提醒"的群</string>
    <string name="nim_exception_notify">抱歉,程序出现异常</string>
    <string name="nim_message_txt_count">一次聊天内容输入最多%d字</string>
    <string name="nim_image_save_path">图片保存到%s</string>
    <string name="nim_image_save_txt">保存到手机</string>
    <string name="nim_image_repeat_txt">转发给朋友</string>
</resources>
